examples/test/testpolicy7177.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7177
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key10: value21
      key4: value23
      key44: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value42
      podSelector:
        matchLabels:
          key36: value23
